<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_period"
        android:id="@+id/period"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onPeriodClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_zero"
        android:id="@+id/zero"
        android:layout_alignTop="@+id/period"
        android:layout_toEndOf="@+id/period"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_equals"
        android:id="@+id/equals"
        android:layout_alignTop="@+id/zero"
        android:layout_toEndOf="@+id/zero"
        android:onClick="onEqualClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_plus"
        android:id="@+id/plus"
        android:layout_alignTop="@+id/equals"
        android:layout_toEndOf="@+id/equals"
        android:onClick="onOperatorClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_one"
        android:id="@+id/one"
        android:layout_above="@+id/period"
        android:layout_alignParentStart="true"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_two"
        android:id="@+id/two"
        android:layout_alignTop="@+id/one"
        android:layout_toEndOf="@+id/one"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_three"
        android:id="@+id/three"
        android:layout_alignTop="@+id/two"
        android:layout_toEndOf="@+id/two"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_minus"
        android:id="@+id/minus"
        android:layout_alignTop="@+id/three"
        android:layout_toEndOf="@+id/three"
        android:onClick="onOperatorClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_four"
        android:id="@+id/four"
        android:layout_above="@+id/one"
        android:layout_alignParentStart="true"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_five"
        android:id="@+id/five"
        android:layout_alignTop="@+id/four"
        android:layout_toEndOf="@+id/four"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_six"
        android:id="@+id/six"
        android:layout_alignTop="@+id/five"
        android:layout_toEndOf="@+id/five"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_multiply"
        android:id="@+id/multiply"
        android:layout_alignTop="@+id/six"
        android:layout_toEndOf="@+id/six"
        android:onClick="onOperatorClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_seven"
        android:id="@+id/seven"
        android:layout_above="@+id/four"
        android:layout_alignParentStart="true"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_eight"
        android:id="@+id/eight"
        android:layout_alignTop="@+id/seven"
        android:layout_toEndOf="@+id/seven"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_nine"
        android:id="@+id/nine"
        android:layout_alignTop="@+id/eight"
        android:layout_toEndOf="@+id/eight"
        android:onClick="onNumberClick"
        android:background="@android:drawable/btn_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_divide"
        android:id="@+id/divide"
        android:layout_alignTop="@+id/nine"
        android:layout_toEndOf="@+id/nine"
        android:onClick="onOperatorClick"
        android:background="@android:drawable/btn_default" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/buffer_default"
        android:id="@+id/buffer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/divide"
        android:textSize="52sp"
        android:gravity="end"
        android:textIsSelectable="true"
        android:lines="1"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign"
        android:id="@+id/sign"
        android:layout_above="@+id/nine"
        android:layout_alignEnd="@+id/divide"
        android:background="@android:drawable/btn_default"
        android:onClick="onSignClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:id="@+id/clear"
        android:layout_alignTop="@+id/sign"
        android:layout_toStartOf="@+id/sign"
        android:background="@android:drawable/btn_default"
        android:onClick="onClear"
        android:longClickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_allclear"
        android:id="@+id/allclear"
        android:layout_above="@+id/seven"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/clear"
        android:background="@android:drawable/btn_default"
        android:onClick="onClear"
        android:layout_alignParentEnd="false" />
</RelativeLayout>
